--- a/install/envs/mac.yml
+++ b/install/envs/mac.yml
@@ -1,36 +1,52 @@
 name: donkey
 channels:
-- defaults
+  - defaults
 dependencies:
-- mkl=2017.0.3=0
-- numpy=1.13.1=py36_0
-- openssl=1.0.2l=0
-- python=3.6.2=0
-- readline=6.2=2
-- setuptools=27.2.0=py36_0
-- sqlite=3.13.0=0
-- tk=8.5.18=0
-- wheel=0.29.0=py36_0
-- xz=5.2.3=0
-- zlib=1.2.11=0
-- pip:
-  - bleach==1.5.0
-  - certifi==2017.7.27.1
-  - chardet==3.0.4
-  - docopt==0.6.2
-  - h5py==2.7.1
-  - html5lib==0.9999999
-  - idna==2.6
-  - markdown==2.6.9
-  - olefile==0.44
-  - pillow==4.2.1
-  - protobuf==3.4.0
-  - pyyaml==3.12
-  - requests==2.18.4
-  - scipy==0.19.1
-  - six==1.10.0
-  - tornado==4.5.1
-  - urllib3==1.22
-  - werkzeug==0.12.2
-  - tensorflow==1.7.0
+  - ca-certificates=2019.1.23=0
+  - certifi=2019.3.9=py37_0
+  - libcxx=4.0.1=hcfea43d_1
+  - libcxxabi=4.0.1=hcfea43d_1
+  - libedit=3.1.20181209=hb402a30_0
+  - libffi=3.2.1=h475c297_4
+  - ncurses=6.1=h0a44026_1
+  - openssl=1.1.1b=h1de35cc_1
+  - pip=19.1=py37_0
+  - python=3.7.3=h359304d_0
+  - readline=7.0=h1de35cc_5
+  - setuptools=41.0.1=py37_0
+  - sqlite=3.28.0=ha441bb4_0
+  - tk=8.6.8=ha441bb4_0
+  - wheel=0.33.1=py37_0
+  - xz=5.2.4=h1de35cc_4
+  - zlib=1.2.11=h1de35cc_3
+  - pip:
+    - absl-py==0.7.1
+    - astor==0.7.1
+    - bleach==3.1.0
+    - chardet==3.0.4
+    - docopt==0.6.2
+    - gast==0.2.2
+    - grpcio==1.20.1
+    - h5py==2.9.0
+    - html5lib==1.0.1
+    - idna==2.8
+    - keras-applications==1.0.7
+    - keras-preprocessing==1.0.9
+    - markdown==3.1
+    - mock==3.0.5
+    - numpy==1.16.3
+    - pillow==6.0.0
+    - protobuf==3.7.1
+    - pyyaml==5.1
+    - requests==2.21.0
+    - scipy==1.2.1
+    - six==1.12.0
+    - tensorboard==1.13.1
+    - tensorflow==1.13.1
+    - tensorflow-estimator==1.13.0
+    - termcolor==1.1.0
+    - tornado==6.0.2
+    - urllib3==1.24.3
+    - webencodings==0.5.1
+    - werkzeug==0.15.2
 
