--- a/install/envs/mac.yml
+++ b/install/envs/mac.yml
@@ -12,6 +12,7 @@ dependencies:
   - openssl=1.1.1b=h1de35cc_1
   - pip=19.1=py37_0
   - python=3.7.3=h359304d_0
+  - python.app=2=py37_9
   - readline=7.0=h1de35cc_5
   - setuptools=41.0.1=py37_0
   - sqlite=3.28.0=ha441bb4_0
@@ -24,19 +25,46 @@ dependencies:
     - astor==0.7.1
     - bleach==3.1.0
     - chardet==3.0.4
+    - click==7.0
+    - cycler==0.10.0
+    - decorator==4.4.0
+    - dnspython==1.16.0
     - docopt==0.6.2
+    - eventlet==0.24.1
+    - flask==1.0.2
     - gast==0.2.2
+    - greenlet==0.4.15
     - grpcio==1.20.1
     - h5py==2.9.0
     - html5lib==1.0.1
     - idna==2.8
+    - imageio==2.5.0
+    - imageio-ffmpeg==0.3.0
+    - itsdangerous==1.1.0
+    - jinja2==2.10.1
+    - keras==2.2.4
     - keras-applications==1.0.7
     - keras-preprocessing==1.0.9
+    - kiwisolver==1.1.0
     - markdown==3.1
+    - markupsafe==1.1.1
+    - matplotlib==3.0.3
     - mock==3.0.5
+    - monotonic==1.5
+    - moviepy==1.0.0
     - numpy==1.16.3
+    - opencv-contrib-python==4.1.0.25
+    - paho-mqtt==1.4.0
+    - pandas==0.24.2
     - pillow==6.0.0
+    - prettytable==0.7.2
+    - proglog==0.1.9
     - protobuf==3.7.1
+    - pyparsing==2.4.0
+    - python-dateutil==2.8.0
+    - python-engineio==3.5.1
+    - python-socketio==4.0.1
+    - pytz==2019.1
     - pyyaml==5.1
     - requests==2.21.0
     - scipy==1.2.1
@@ -45,7 +73,8 @@ dependencies:
     - tensorflow==1.13.1
     - tensorflow-estimator==1.13.0
     - termcolor==1.1.0
-    - tornado==6.0.2
+    - tornado==4.5.3
+    - tqdm==4.31.1
     - urllib3==1.24.3
     - webencodings==0.5.1
     - werkzeug==0.15.2
