--- a/install/envs/windows.yml
+++ b/install/envs/windows.yml
@@ -1,67 +1,67 @@
 name: donkey
 channels:
-- defaults
+  - defaults
 dependencies:
-- bzip2=1.0.6=vc14_3
-- cycler=0.10.0=py36_0
-- decorator=4.1.2=py36_0
-- freetype=2.5.5=vc14_2
-- h5py=2.7.0=np113py36_0
-- hdf5=1.8.15.1=vc14_4
-- icu=57.1=vc14_0
-- jpeg=9b=vc14_0
-- libpng=1.6.27=vc14_0
-- libtiff=4.0.6=vc14_3
-- matplotlib=2.0.2=np113py36_0
-- mkl=2017.0.3=0
-- networkx=1.11=py36_0
-- numpy=1.13.1=py36_0
-- olefile=0.44=py36_0
-- openssl=1.0.2l=vc14_0
-- pandas=0.20.3=py36_0
-- pillow=4.2.1=py36_0
-- pip=9.0.1=py36_1
-- pyparsing=2.2.0=py36_0
-- pyqt=5.6.0=py36_2
-- python=3.6.2=0
-- python-dateutil=2.6.1=py36_0
-- pytz=2017.2=py36_0
-- pywavelets=0.5.2=np113py36_0
-- qt=5.6.2=vc14_6
-- scikit-image=0.13.0=np113py36_0
-- scipy=0.19.1=np113py36_0
-- setuptools=27.2.0=py36_1
-- sip=4.18=py36_0
-- six=1.10.0=py36_0
-- tk=8.5.18=vc14_0
-- vs2015_runtime=14.0.25420=0
-- wheel=0.29.0=py36_0
-- zlib=1.2.8=vc14_3
-- pip:
-  - backports.weakref==1.0rc1
-  - bleach==1.5.0
-  - certifi==2017.7.27.1
-  - chainer==2.0.2
-  - chardet==3.0.4
-  - docopt==0.6.2
-  - envoy==0.0.3
-  - filelock==2.0.11
-  - html5lib==0.9999999
-  - idna==2.5
-  - imageio==2.1.2
-  - markdown==2.6.8
-  - mock==2.0.0
-  - moviepy==0.2.3.2
-  - nose==1.3.7
-  - opencv-python==3.2.0.8
-  - pbr==3.1.1
-  - protobuf==3.3.0
-  - pyyaml==3.12
-  - requests==2.18.3
-  - tensorflow==1.13.1
-  - tensorflow-tensorboard==1.13.1
-  - theano==0.9.0
-  - tornado==4.5.1
-  - tqdm==4.11.2
-  - urllib3==1.22
-  - werkzeug==0.12.2
+  - ca-certificates=2019.1.23=0
+  - certifi=2019.3.9=py37_0
+  - openssl=1.1.1c=he774522_1
+  - pip=19.1.1=py37_0
+  - python=3.7.3=h8c8aaf0_1
+  - setuptools=41.0.1=py37_0
+  - sqlite=3.28.0=he774522_0
+  - vc=14.1=h0510ff6_4
+  - vs2015_runtime=14.15.26706=h3a45250_4
+  - wheel=0.33.4=py37_0
+  - wincertstore=0.2=py37_0
+  - pip:
+    - absl-py==0.7.1
+    - astor==0.8.0
+    - chardet==3.0.4
+    - click==7.0
+    - decorator==4.4.0
+    - dnspython==1.16.0
+    - docopt==0.6.2
+    - eventlet==0.25.0
+    - flask==1.0.3
+    - gast==0.2.2
+    - greenlet==0.4.15
+    - grpcio==1.21.1
+    - h5py==2.9.0
+    - idna==2.8
+    - imageio==2.5.0
+    - imageio-ffmpeg==0.3.0
+    - itsdangerous==1.1.0
+    - jinja2==2.10.1
+    - keras==2.2.4
+    - keras-applications==1.0.8
+    - keras-preprocessing==1.1.0
+    - markdown==3.1.1
+    - markupsafe==1.1.1
+    - mock==3.0.5
+    - monotonic==1.5
+    - moviepy==1.0.0
+    - numpy==1.16.4
+    - paho-mqtt==1.4.0
+    - pandas==0.24.2
+    - pillow==6.0.0
+    - prettytable==0.7.2
+    - proglog==0.1.9
+    - protobuf==3.8.0
+    - python-dateutil==2.8.0
+    - python-engineio==3.7.0
+    - python-socketio==4.0.3
+    - pytz==2019.1
+    - pyyaml==5.1
+    - requests==2.22.0
+    - scipy==1.3.0
+    - six==1.12.0
+    - tensorboard==1.13.1
+    - tensorflow==1.13.1
+    - tensorflow-estimator==1.13.0
+    - termcolor==1.1.0
+    - tornado==4.5.3
+    - tqdm==4.32.1
+    - urllib3==1.25.3
+    - werkzeug==0.15.4
+prefix: C:\Users\Broerkens\Miniconda3\envs\donkey
+
